// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no exposure matches snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="possible"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#ffc000",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="possible"
        style={
          Object {
            "color": "#FFF",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;

exports[`no risk takes prio over today 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="none"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#41dca4",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="none"
        style={
          Object {
            "color": "#FFF",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;

exports[`possible exposure matches snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="possible"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#ffc000",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="possible"
        style={
          Object {
            "color": "#FFF",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;

exports[`some risk takes prio over today 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="possible"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#ffc000",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "transparent",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="possible"
        style={
          Object {
            "color": "#FFF",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;

exports[`today matches snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="unknown"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "rgba(64, 81, 219, 0.6)",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="unknown"
        style={
          Object {
            "color": "rgba(64, 81, 219, 0.6)",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;

exports[`unknown exposure matches snapshot 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 4,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 4,
      }
    }
  >
    <View
      riskLevel="unknown"
      size={36}
      style={
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomLeftRadius": 18,
          "borderBottomRightRadius": 18,
          "borderColor": "rgba(64, 81, 219, 0.6)",
          "borderStyle": "solid",
          "borderTopLeftRadius": 18,
          "borderTopRightRadius": 18,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 36,
          "width": 36,
        }
      }
    >
      <Text
        riskLevel="unknown"
        style={
          Object {
            "color": "rgba(64, 81, 219, 0.6)",
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "fontSize": 12,
            "fontWeight": "bold",
            "textAlign": "center",
          }
        }
      >
        9
      </Text>
    </View>
  </View>
</View>
`;
